# shopscraper

./: CONTRIBUTING.rst  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: on-merge-to-main.yml
.github/workflows/setup-poetry-env/: action.yml
docs/: index.md  modules.md
src/shopscraper/: __init__.py  api.py  headers.py  json_handler.py  prod_objs.py  scraper.py
tests/: conftest.py  test_api.py  test_headers.py  test_json_handler.py  test_prod_objs.py  test_scraper.py  test_shopscrape.py  test_shopscraper.py
tests/resources/: shopifyapi_response.json
