[tool.poetry]
name = "shopscraper"
version = "0.0.5"
description = "ShopScraper is a thin python wrapper for Shopify webshop product APIs used to scrape information from online stores."
authors = ["Philistino <fphilistino@protonmail.com>"]
repository = "https://github.com/philistino/shopscraper"
documentation = "https://philistino.github.io/shopscraper/"
readme = "README.md"
exclude = ["tests"]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pydantic = "^1.9.0"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
mkdocstrings = "^0.18.1"
mypy = "^0.942"
types-requests = "^2.27.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    "tests",
]
